--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,13 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.15)
 
-project(algo)
+project(algo CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 set(CMAKE_EXPORT_COMPILE_COMMANDS on)
 
 if(MSVC)
-   string(REGEX REPLACE "/W[3|4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-   add_compile_options(/W4)
-   add_compile_options(/MP)
+   add_compile_options(/W4 /WX /MP)
    add_compile_definitions(_WIN32_WINNT=0x0A00)
 else()
    add_compile_options(-Wall -Wextra -Wpedantic)
@@ -34,5 +32,5 @@ include_directories(src)
 set(projectLib ${CMAKE_PROJECT_NAME}-lib)
 set(projectTest ${CMAKE_PROJECT_NAME}-test)
 
-add_subdirectory(src)
+add_subdirectory(src bin)
 add_subdirectory(test)
