--- a/launch.vs.json
+++ b/launch.vs.json
@@ -7,7 +7,7 @@
       "name": "algo-test.exe (test\\algo-test.exe)",
       "project": "CMakeLists.txt",
       "projectTarget": "algo-test.exe (test\\algo-test.exe)",
-      "args": [ "--gtest_filter=*Graph* --gtest_repeat=1" ]
+      "args": [ "--gtest_filter=*ContainsNearbyAlmostDuplicate*", "--gtest_repeat=1" ]
     }
   ]
 }
