--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS on)
 if(MSVC)
    add_compile_options(/W4 /WX /MP)
    add_compile_definitions(_WIN32_WINNT=0x0A00)
+   add_compile_definitions(NOMINMAX)
 else()
    add_compile_options(-Wall -Wextra -Wpedantic -Wno-undefined-var-template)
 endif()
