Update cmake lists file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,22 @@ cmake_minimum_required(VERSION 3.15)
 
 project(algo CXX)
 
+set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 set(CMAKE_EXPORT_COMPILE_COMMANDS on)
 
 if(MSVC)
-   add_compile_options(/W4 /WX /MP)
-   add_compile_definitions(_WIN32_WINNT=0x0A00)
-   add_compile_definitions(NOMINMAX)
+   string(REGEX REPLACE "/W[1-3]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+   string(APPEND CMAKE_CXX_FLAGS " /Zc:__cplusplus /MP")
+   add_compile_options("/WX")
 else()
    add_compile_options(-Wall -Wextra -Wpedantic -Wno-undefined-var-template)
+endif()
+
+if(WIN32)
+   add_compile_definitions(_WIN32_WINNT=_WIN32_WINNT_WIN10)
+   add_compile_definitions(NOMINMAX)
 endif()
 
 # Diagnostic information
